# lumvorax

./: .gitattributes  .gitignore  .replit  pyproject.toml  replit.md
.ccls-cache/@@home@runner@workspace/: @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm-generic@bitsperlong.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm-generic@errno-base.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm-generic@errno.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm-generic@posix_types.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm-generic@socket.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm-generic@sockios.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm@bitsperlong.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm@errno.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm@posix_types.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm@posix_types_64.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm@socket.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@asm@sockios.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@linux@close_range.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@linux@errno.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@linux@posix_types.h.blob  @nix@store@9snzq7f6cvxfrpy1q9yxhp55xf7xp3ma-linux-headers-6.16.7@include@linux@stddef.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  (+446 more)
RAPPORT/: 007_RAPPORT_MODULE_CRYPTO_VALIDATOR_LIGNE_PAR_LIGNE_20250924.md
RAPPORT-VESUVIUS/: analysis_submission_masks_metrics.json  analysis_submission_masks_metrics_v61_2_v7_4.json  analysis_v1401_v1441_deep_audit.json  campaign_execution_local_preflight_v61_3_v7_5.json  campaign_run_matrix_v61_3_v7_5.json  competitor_params_extracted_v0552.json  github_sync_verification.json  iamo3_line_by_line_update.json  plan_roadmap_audit_inventory.json
attached_assets/: Pasted--Plan-complet-de-corrections-d-authenticit-Lumvorax-NX-_1770668523755.txt
lum-vorax-dependencies/: dataset-metadata.json
nx47_dependencies_v3/: dataset-metadata.json
results/: ADC_REAL_HARDWARE_CAPTURE_V6.json  kernel_env_detect_v6.json  system_metrics_v6.json
src/advanced_calculations/quantum_simulator_v5_competitor_cpu/results/20260303_195702/clones/mqt_ddsim/: CMakeLists.txt
src/advanced_calculations/quantum_simulator_v5_competitor_cpu/results/20260303_195702/clones/mqt_ddsim/bindings/: CMakeLists.txt
src/advanced_calculations/quantum_simulator_v5_competitor_cpu/results/20260303_195702/clones/mqt_ddsim/docs/: contributing.md  index.md
src/advanced_calculations/quantum_simulator_v5_competitor_cpu/results/20260303_195702/clones/mqt_ddsim/docs/simulators/: CircuitSimulator.md  SimulationPathFramework.md  UnitarySimulator.md
src/advanced_calculations/quantum_simulator_v5_competitor_cpu/results/20260303_195702/clones/mqt_ddsim/test/: CMakeLists.txt
(+1493 files in other folders)
